  . socket_addrinfo_lookup throws an exception if one or more hints entries
    has an index as numeric. (David Carlier)
  . socket_set_option with the options MCAST_LEAVE_GROUP/MCAST_LEAVE_SOURCE_GROUP
    will throw an exception if its value is not a valid array/object.
    (David Carlier)
  . socket_getsockname/socket_create/socket_bind handled AF_PACKET family socket.
    (David Carlier)
  . Added IP_BINDANY for a socket to bind to any address. (David Carlier)
  . Added SO_BUSY_POOL to reduce packets poll latency. (David Carlier)
  - Added UDP_SEGMENT support to optimise multiple large datagrams over UDP
    if the kernel and hardware supports it. (David Carlier)

- Sodium:
  . Fix overall theorical overflows on zend_string buffer allocations.
    (David Carlier/nielsdos)

- Standard:
  . Fixed crypt() tests on musl when using --with-external-libcrypt
    (Michael Orlitzky).
  . Fixed bug GH-18062 (is_callable(func(...), callable_name: $name) for first
    class callables returns wrong name). (timwolla)
  . Added array_first() and array_last(). (nielsdos)

- Streams:
  . Fixed bug GH-16889 (stream_select() timeout useless for pipes on Windows).
    (cmb)

- Tests:
  . Allow to shuffle tests even in non-parallell mode. (dhuang00)

- Windows:
  . Fixed bug GH-10992 (Improper long path support for relative paths). (cmb,
    nielsdos)
  . Fixed bug GH-16843 (Windows phpize builds ignore source subfolders). (cmb)

- XMLWriter:
  . Improved performance and reduce memory consumption. (nielsdos)

- XSL:
  . Implement request #30622 (make $namespace parameter functional). (nielsdos)

- Zlib:
  . gzfile, gzopen and readgzfile, their "use_include_path" argument
    is now a boolean. (David Carlier)
  . Fixed bug GH-16883 (gzopen() does not use the default stream context when
    opening HTTP URLs). (nielsdos)
  . Implemented GH-17668 (zlib streams should support locking). (nielsdos)


<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>